RESOLVED FIXED223929
CSS properties backed by StyleImage should not interpolate when one of the values is "none"
https://bugs.webkit.org/show_bug.cgi?id=223929
Summary CSS properties backed by StyleImage should not interpolate when one of the va...
Antoine Quint
Reported 2021-03-30 07:16:25 PDT
CSS properties backed by StyleImage should not interpolate when one of the values is "none"
Attachments
Patch (106.28 KB, patch)
2021-03-30 07:17 PDT, Antoine Quint
no flags
Antoine Quint
Comment 1 2021-03-30 07:17:56 PDT
EWS
Comment 2 2021-03-30 12:42:50 PDT
Committed r275227: <https://commits.webkit.org/r275227> All reviewed patches have been landed. Closing bug and clearing flags on attachment 424636 [details].
Radar WebKit Bug Importer
Comment 3 2021-03-30 12:43:14 PDT
Note You need to log in before you can comment on or make changes to this bug.