CSS properties backed by StyleImage should not interpolate when one of the values is "none" https://bugs.webkit.org/show_bug.cgi?id=223929

Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

Mark 76 new PASS results.

* web-platform-tests/css/css-backgrounds/animations/background-image-interpolation-expected.txt:
* web-platform-tests/css/css-backgrounds/animations/border-image-source-interpolation-expected.txt:
* web-platform-tests/css/css-lists/animations/list-style-image-interpolation-expected.txt:

Source/WebCore:

* animation/CSSPropertyAnimation.cpp:
(WebCore::blendFunc):


git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275227 268f45cc-cd09-0410-ab3c-d52691b4dbfc
Canonical link: https://commits.webkit.org/235921@main